Minor design issues (Overflow fixed)

--- a/src/index.css
+++ b/src/index.css
@@ -53,23 +53,22 @@ button {
   cursor: pointer;
   transition: border-color 0.25s;
 }
-button:hover {
-  border-color: #646cff;
-}
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
+
+::-webkit-scrollbar {
+  width: 8px;
 }
 
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: rgb(254 243 199);;
-  }
-  a:hover {
-    color: #747bff;
-  }
-  button {
-    background-color: #f9f9f9;
-  }
+::-webkit-scrollbar-thumb {
+  background-color: rgb(254,243,199); 
+  border-radius: 12px;
+  border: 2px solid rgb(24,24,27);
+}
+
+::-webkit-scrollbar-track {
+  background-color:rgb(24,24,27);
+  border-radius: 10px;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background-color: rgb(254 ,243, 199);
 }
